add alaram manager, and work fine

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,9 +44,9 @@
             android:name=".data.WeatherProvider" />
 
         <service android:name=".service.SunshineService">
-            
-        </service>
 
+        </service>
+        <receiver android:name=".service.SunshineService$AlarmReceiver" android:enabled="true"/>
     </application>
 
 </manifest>
