--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,13 @@
     android:installLocation="auto">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <!-- Permissions required by the sync adapter -->
+    <uses-permission
+        android:name="android.permission.READ_SYNC_SETTINGS"/>
+    <uses-permission
+        android:name="android.permission.WRITE_SYNC_SETTINGS"/>
+    <uses-permission
+        android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
 
     <application
         android:allowBackup="true"
@@ -39,14 +45,42 @@
                 android:value="moaz.mysunshine.MainActivity" />
         </activity>
 
+        <!--<provider-->
+            <!--android:authorities="moaz.mysunshine"-->
+            <!--android:name=".data.WeatherProvider" />-->
+
+        <!--<service android:name=".service.SunshineService"/>-->
+        <!--<receiver android:name=".service.SunshineService$AlarmReceiver" android:enabled="true"/>-->
+
         <provider
-            android:authorities="moaz.mysunshine"
-            android:name=".data.WeatherProvider" />
+            android:authorities="@string/content_authority"
+            android:name=".data.WeatherProvider"
+            android:exported="false"
+            android:syncable="true" />
 
-        <service android:name=".service.SunshineService">
-
+        <service
+            android:name=".sync.SunshineAuthenticatorService"
+            >
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator" />
         </service>
-        <receiver android:name=".service.SunshineService$AlarmReceiver" android:enabled="true"/>
+
+        <!-- The SyncAdapter service -->
+        <service
+            android:name=".sync.SunshineSyncService"
+            android:exported="true"
+            >
+            <intent-filter>
+                <action android:name="android.content.SyncAdapter" />
+            </intent-filter>
+            <meta-data
+                android:name="android.content.SyncAdapter"
+                android:resource="@xml/syncadapter" />
+        </service>
     </application>
 
 </manifest>
